@@ -119,7 +119,6 @@
         <exclude name="test_datafile_interop.py"/>
       </fileset>
     </py-test>
-    <delete dir="${build.dir}"/>
   </target>
 
   <target name="interop-data-test"
@@ -132,7 +131,6 @@
         <include name="test_datafile_interop.py"/>
       </fileset>
     </py-test>
-    <delete dir="${build.dir}"/>
   </target>
 
   <target name="interop-data-generate"
@@ -145,7 +143,6 @@
       <arg value="${share.dir}/test/schemas/interop.avsc"/>
       <arg value="${interop.data.dir}/py.avro"/>
     </exec>
-    <delete dir="${build.dir}"/>
   </target>
 
   <target name="dist"
